[package]
name = "hostlist"
version = "0.3.1"
authors = ["Janne Blomqvist <blomqvist.janne@gmail.com>"]
edition = "2018"
description = "Hostlist library for Rust and CLI app"
license = "MIT"
homepage = "https://github.com/jabl/hostlist"
repository = "https://github.com/jabl/hostlist"
readme = "README.md"

[features]
default = ["clap"]

[[bin]]
name = "hostlist"
required-features = ["clap"]

[dependencies]
nom = { version = "^6.0" }
clap = { version = "2", optional = true }
